# Toy_Project

./: .gitattributes  .gitignore
darkweb_crawler/: API_SCHEMA.md  PROJECT_SUMMARY.md  QUICKSTART_REMOTE.md  README.md  REMOTE_SERVER_SETUP.md  TOR_SETUP_GUIDE.md  WEB_INTERFACE_GUIDE.md  agent.py  launcher.py  make_ppt.py  requirements.txt
darkweb_crawler/analysis_reports/: analysis_report_dreadytofatroptsdj6io7l3xptbet6onoyno2yv7jicoxknyazubrad_onion_20260511_152113.html  analysis_report_drughub666py6fgnml5kmxa7fva5noppkf6wkai4fwwvzwt4rz645aqd_onion_20260511_151949.html  analysis_report_ebthewsq7cc4dhwarqsp25fodgki7ooaynipgib7q3a6r5y4vibgtiyd_onion_20260415_161641.html  analysis_report_keta2372y37g4o2qdhr2utvl5ryfbicyt4lepdjfc4m7ivgyqcc7soqd_onion_20260511_153159.html  analysis_report_kpz62k4pnyh5g5t2efecabkywt2aiwcnqylthqyywilqgxeiipen5xid_onion_20260415_161706.html  analysis_report_mdgdxj5d7wlgq3m6e4fvca5sgnbvejsyjh3sqh3p3tfngcnrhpuy3aid_onion_20260415_161556.html  analysis_report_primeynxn52jsv3d7mbq2zoehoikid7kv5gv7t3p3n2qeeqdgicxh5yd_onion_20260511_153927.html  (+2 more)
darkweb_crawler/analyzers/: __init__.py  (+6 more)
file_carving/: Cargo.toml
frontend/: Cargo.toml  index.html
frontend/src/: app.rs  main.rs
frontend/src/pages/: login.rs  mod.rs  register.rs  todos.rs
gatekeeper_bypass/: MANIFEST.in  boop_payload.c  boop_payload_exec  setup.py
hansung_crawler/: categorized_notices.json  ce_categorized_notices.json  exam.py  get_html.py  home_categorized_notices.json  information.txt  information_2.txt  main.py  make_json.py  result.txt  utils.py
login_web_server/: Cargo.toml  test.db
macos-dylib-hijacking-toolkit/: Makefile  README.md
simple_web_server/: Cargo.toml
study_web_server/: Cargo.toml  exam.db
study_web_server/migrations/: 202505011714_create_exam.sql
study_web_server/src/: main.rs
study_web_server/src/routes/: mod.rs
study_web_server/tests/: integration_test.rs
(+112 files in other folders)
