[package]
name = "study_web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# SQLx와 SQLite 관련
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }